html: 📍 Add slide box

--- a/index.html
+++ b/index.html
@@ -55,7 +55,15 @@
             <div class="blaze-container">
               <div class="blaze-track-container">
                 <div class="blaze-track">
-                  <div>ss</div>
+                  <div class="slide-box">
+                    <div class="img-box">
+                    <img src="./src/images/brandmonitor-project.png" alt="">
+                    </div>
+                    <div class="info-box">
+                        <p>Página de cadastro de usuários <br> utilizando MongoDB, Mongoose, Node express, Ejs, bcrypt, body-parser </p>
+                    <button>Ver projeto<i class="icon-eye"></i></button>
+                    </div>
+                  </div>
                   <div>coming soon 2</div>
                   <div>coming soon 3</div>
                   <div>coming soon 4</div>
