html: 📍 Add preLoader

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 </head>
 
 <body>
-    <!-- <div class="preloader">
+    <div class="preloader">
         <div id="loader"></div>
-    </div> -->
+    </div>
 
     <!-- MENU -->
     <div class="navbar">
