html: 📍 Add card-2

--- a/index.html
+++ b/index.html
@@ -56,24 +56,44 @@
                 <div class="blaze-track-container">
                     <div class="blaze-track">
 
+                        <!-- BrandMonitor -->
                         <div class="slide-box">
-
                             <div class="img-box-card">
                                 <img src="./src/images/BM-project-1.png" alt="">
                             </div>
                             <div class="info-box">
                                 <div class="sub-title">
-                                    <p>Teste de estágio <span style="color: #50e6ff;">BrandMonitor</span><br>Página de cadastros de usuários</p>
+                                    <p><span style="color: #50e6ff;">BrandMonitor</span><br> Teste de estágio <br>&#9830; Página de
+                                        cadastros de usuários</p>
                                 </div>
                                 <div class="icons-slide">
                                     <i class="icon-node-dot-js">
                                     </i> <i class="icon-mongodb"></i>
                                 </div>
-                               <a href="https://github.com/lucassb15/teste-bm-lucassb15" target="_blank"><button>Ver projeto<i class="icon-eye"></i></button></a>
+                                <a href="https://github.com/lucassb15/teste-bm-lucassb15" target="_blank"><button>Ver
+                                        projeto<i class="icon-eye"></i></button></a>
                             </div>
-
                         </div>
-                        <div>coming soon 2</div>
+
+                        <!-- Trip Valley -->
+                        <div class="slide-box">
+
+                            <div class="img-box-card-trip">
+                                <img src="./src/images/TripValley-project-2.png" alt="">
+                            </div>
+                            <div class="info-box">
+                                <div class="sub-title">
+                                    <p><span style="color: #267fd9; font-weight: 600;">TRIPvalley.</span><br> Projeto interdisciplinar (FATEC GT) <br>&#9830; Página de
+                                        cadastros de usuários</p>
+                                </div>
+                                <div class="icons-slide">
+                                    <i class="icon-node-dot-js"></i>
+                                    <i class="icon-mongodb"></i>
+                                </div>
+                                <a href="https://github.com/lucassb15/TRIP-VALLEY" target="_blank"><button>Ver projeto<i
+                                            class="icon-eye"></i></button></a>
+                            </div>
+                        </div>
                         <div>coming soon 3</div>
                         <div>coming soon 4</div>
                     </div>
