html: 📍 Add card-3-4

--- a/index.html
+++ b/index.html
@@ -84,9 +84,12 @@
                             <div class="info-box">
                                 <div class="sub-title">
                                     <p><span style="color: #267fd9; font-weight: 600;">TRIPvalley.</span><br> Projeto interdisciplinar (FATEC GT) <br>&#9830; Página de
-                                        cadastros de usuários</p>
+                                        vendas de pacotes para viagens</p>
                                 </div>
                                 <div class="icons-slide">
+                                    <i class="icon-html5"></i>
+                                    <i class="icon-css3"></i>
+                                    <i class="icon-javascript"></i>
                                     <i class="icon-node-dot-js"></i>
                                     <i class="icon-mongodb"></i>
                                 </div>
@@ -94,8 +97,46 @@
                                             class="icon-eye"></i></button></a>
                             </div>
                         </div>
-                        <div>coming soon 3</div>
-                        <div>coming soon 4</div>
+
+                        <!-- Mario -->
+                        <div class="slide-box">
+
+                            <div class="img-box-card-mario">
+                                <img src="./src/images/mario-project-3.png" alt="">
+                            </div>
+                            <div class="info-box">
+                                <div class="sub-title">
+                                    <p><span style="color: #ff0021; font-weight: 600;">Mario</span><br> Curso (DEV EM DOBRO) <br>&#9830; Página de
+                                        divulgação do filme mario</p>
+                                </div>
+                                <div class="icons-slide">
+                                    <i class="icon-html5"></i>
+                                    <i class="icon-css3"></i>
+                                    <i class="icon-javascript"></i>
+                                </div>
+                                <a href="https://github.com/lucassb15/projeto-mario-front" target="_blank"><button>Ver projeto<i
+                                            class="icon-eye"></i></button></a>
+                            </div>
+                        </div>
+
+                        <!-- CalculadoraJs -->
+                        <div class="slide-box">
+
+                            <div class="img-box-card-calculadora">
+                                <img src="./src/images/calculadoraJS-project-4.png" alt="">
+                            </div>
+                            <div class="info-box">
+                                <div class="sub-title">
+                                    <p><span style="color:  #df3df5d6; font-weight: 600;">Mario</span><br> Curso (DEV EM DOBRO) <br>&#9830;
+                                        Calculadora feita com javascript</p>
+                                </div>
+                                <div class="icons-slide">
+                                    <i class="icon-javascript"></i>
+                                </div>
+                                <a href="https://github.com/lucassb15/calculadoraJS" target="_blank"><button>Ver projeto<i
+                                            class="icon-eye"></i></button></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -110,9 +151,10 @@
         </div>
     </section>
 
-    <!-- MongoDB, Mongoose, Node express, Ejs,
-    bcrypt, body-parser -->
-
+    <!-- CONTACTS -->
+    <section class="container">
+        <h1 class="title-text" style="text-align: center;">CONTACT - COMING SOON</h1>
+    </section>
     <!-- Socials Fixed menu -->
     <section>
         <!-- socials + scrolls -->
@@ -122,7 +164,7 @@
             <a href=""><i class="icon-instagram"></i></a> <!-- Instagram -->
         </div>
         <div class="scroll-bar">
-            <span><span id="active-line">││</span> SCROLL ││</span>
+            <span><span id="active-line" style="letter-spacing: -1.3px;">││</span> SCROLL <span style="letter-spacing: -1.3px;">││</span></span>
         </div>
 
     </section>
