html: 📍 Add card-3-4

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             </div>
                             <div class="info-box">
                                 <div class="sub-title">
-                                    <p><span style="color: #50e6ff;">BrandMonitor</span><br> Teste de estágio <br>&#9830; Página de
+                                    <p><span style="color: #50e6ff;">BrandMonitor</span><br> Teste de estágio <br> Página de
                                         cadastros de usuários</p>
                                 </div>
                                 <div class="icons-slide">
@@ -83,13 +83,12 @@
                             </div>
                             <div class="info-box">
                                 <div class="sub-title">
-                                    <p><span style="color: #267fd9; font-weight: 600;">TRIPvalley.</span><br> Projeto interdisciplinar (FATEC GT) <br>&#9830; Página de
+                                    <p><span style="color: #267fd9; font-weight: 600;">TRIPvalley.</span><br> Projeto interdisciplinar (FATEC GT) <br> Página de
                                         vendas de pacotes para viagens</p>
                                 </div>
                                 <div class="icons-slide">
                                     <i class="icon-html5"></i>
                                     <i class="icon-css3"></i>
-                                    <i class="icon-javascript"></i>
                                     <i class="icon-node-dot-js"></i>
                                     <i class="icon-mongodb"></i>
                                 </div>
@@ -106,7 +105,7 @@
                             </div>
                             <div class="info-box">
                                 <div class="sub-title">
-                                    <p><span style="color: #ff0021; font-weight: 600;">Mario</span><br> Curso (DEV EM DOBRO) <br>&#9830; Página de
+                                    <p><span style="color: #ff0021; font-weight: 600;">Mario</span><br> Curso (DEV EM DOBRO) <br> Página de
                                         divulgação do filme mario</p>
                                 </div>
                                 <div class="icons-slide">
@@ -127,7 +126,7 @@
                             </div>
                             <div class="info-box">
                                 <div class="sub-title">
-                                    <p><span style="color:  #df3df5d6; font-weight: 600;">Mario</span><br> Curso (DEV EM DOBRO) <br>&#9830;
+                                    <p><span style="color:  #df3df5d6; font-weight: 600;">Calculadora JS</span><br> Projeto individual<br>
                                         Calculadora feita com javascript</p>
                                 </div>
                                 <div class="icons-slide">
