html: 📍 Add card-3-4

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- MENU -->
     <div class="navbar">
-        <h1 class="letter-logo">LSB</h1>
+        <h1 class="logo-letters">LSB</h1>
         <div>
             <a class="title-text" href="">Contato</a>
             <a class="title-text" href="#projetcs">Projetos</a>
@@ -163,7 +163,7 @@
             <a href=""><i class="icon-instagram"></i></a> <!-- Instagram -->
         </div>
         <div class="scroll-bar">
-            <span><span id="active-line" style="letter-spacing: -1.3px;">││</span> SCROLL <span style="letter-spacing: -1.3px;">││</span></span>
+            <span><span id="active-line" style="letter-spacing: -1.35px;">││</span> SCROLL <span style="letter-spacing: -1.3px;">││</span></span>
         </div>
 
     </section>
