html: 📍 Add card-3-4

--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
     <section>
         <!-- socials + scrolls -->
         <div class="icon-bar">
-            <a href=""><i class="icon-github"></i></a> <!-- GitHub -->
-            <a href=""><i class="icon-linkedin"></i></a> <!-- LinkeDin -->
-            <a href=""><i class="icon-instagram"></i></a> <!-- Instagram -->
+            <a href="https://github.com/lucassb15"><i class="icon-github"></i></a> <!-- GitHub -->
+            <a href="https://www.linkedin.com/in/lucas-soares-barbosa/"><i class="icon-linkedin"></i></a> <!-- LinkeDin -->
+            <a href="https://www.instagram.com/lukas_soares019/"><i class="icon-instagram"></i></a> <!-- Instagram -->
         </div>
         <div class="scroll-bar">
             <span><span id="active-line" style="letter-spacing: -1.35px;">││</span> SCROLL <span style="letter-spacing: -1.3px;">││</span></span>
