--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                             </div>
                             <div class="info-box">
                                 <div class="sub-title">
-                                    <p><span style="color: #50e6ff;">BrandMonitor</span><br> Teste de estágio <br> Página de
+                                    <p><span style="color: #50e6ff;">BrandMonitor</span><br> Teste de estágio <br>
+                                        Página de
                                         cadastros de usuários</p>
                                 </div>
                                 <div class="icons-slide">
@@ -83,7 +84,8 @@
                             </div>
                             <div class="info-box">
                                 <div class="sub-title">
-                                    <p><span style="color: #267fd9; font-weight: 600;">TRIPvalley.</span><br> Projeto interdisciplinar (FATEC GT) <br> Página de
+                                    <p><span style="color: #267fd9; font-weight: 600;">TRIPvalley.</span><br> Projeto
+                                        interdisciplinar (FATEC GT) <br> Página de
                                         vendas de pacotes para viagens</p>
                                 </div>
                                 <div class="icons-slide">
@@ -105,7 +107,8 @@
                             </div>
                             <div class="info-box">
                                 <div class="sub-title">
-                                    <p><span style="color: #ff0021; font-weight: 600;">Mario</span><br> Curso (DEV EM DOBRO) <br> Página de
+                                    <p><span style="color: #ff0021; font-weight: 600;">Mario</span><br> Curso (DEV EM
+                                        DOBRO) <br> Página de
                                         divulgação do filme mario</p>
                                 </div>
                                 <div class="icons-slide">
@@ -113,8 +116,8 @@
                                     <i class="icon-css3"></i>
                                     <i class="icon-javascript"></i>
                                 </div>
-                                <a href="https://github.com/lucassb15/projeto-mario-front" target="_blank"><button>Ver projeto<i
-                                            class="icon-eye"></i></button></a>
+                                <a href="https://github.com/lucassb15/projeto-mario-front" target="_blank"><button>Ver
+                                        projeto<i class="icon-eye"></i></button></a>
                             </div>
                         </div>
 
@@ -126,14 +129,15 @@
                             </div>
                             <div class="info-box">
                                 <div class="sub-title">
-                                    <p><span style="color:  #df3df5d6; font-weight: 600;">Calculadora JS</span><br> Projeto individual<br>
+                                    <p><span style="color:  #df3df5d6; font-weight: 600;">Calculadora JS</span><br>
+                                        Projeto individual<br>
                                         Calculadora feita com javascript</p>
                                 </div>
                                 <div class="icons-slide">
                                     <i class="icon-javascript"></i>
                                 </div>
-                                <a href="https://github.com/lucassb15/calculadoraJS" target="_blank"><button>Ver projeto<i
-                                            class="icon-eye"></i></button></a>
+                                <a href="https://github.com/lucassb15/calculadoraJS" target="_blank"><button>Ver
+                                        projeto<i class="icon-eye"></i></button></a>
                             </div>
                         </div>
                     </div>
@@ -159,11 +163,13 @@
         <!-- socials + scrolls -->
         <div class="icon-bar">
             <a href="https://github.com/lucassb15"><i class="icon-github"></i></a> <!-- GitHub -->
-            <a href="https://www.linkedin.com/in/lucas-soares-barbosa/"><i class="icon-linkedin"></i></a> <!-- LinkeDin -->
+            <a href="https://www.linkedin.com/in/lucas-soares-barbosa/"><i class="icon-linkedin"></i></a>
+            <!-- LinkeDin -->
             <a href="https://www.instagram.com/lukas_soares019/"><i class="icon-instagram"></i></a> <!-- Instagram -->
         </div>
         <div class="scroll-bar">
-            <span><span id="active-line" style="letter-spacing: -1.35px;">││</span> SCROLL <span style="letter-spacing: -1.3px;">││</span></span>
+            <span><span id="active-line" style="letter-spacing: -1.35px;">││</span> SCROLL <span
+                    style="letter-spacing: -1.3px;">││</span></span>
         </div>
 
     </section>
