html: 📍 Add accessibility

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div class="navbar">
         <h1 class="logo-letters">LSB</h1>
         <div>
+            
             <a class="title-text" href="#contact">Contato</a>
             <a class="title-text" href="#projetcs">Projetos</a>
         </div>
@@ -43,7 +44,7 @@
 
             <!-- info-me-c -->
             <div class="info-me">
-                <p class="home-sub-text" style="margin-right: 150px; margin-bottom: -10px;">EU SOU</p>
+                <p class="home-sub-text" style="margin-right: 150px; margin-bottom: -10px;">ME CHAMO</p>
                 <h1 class="home-title-text">LUCAS</h1>
                 <p class="home-sub-text" style="margin-left: 100px; margin-top: -10px;">DESENVOLVEDOR<br>FRONT-END</p>
             </div>
@@ -92,8 +93,7 @@
                             <div class="info-box">
                                 <div class="sub-title">
                                     <p><span style="color: #267fd9; font-weight: 600;">TRIPvalley.</span><br> Projeto
-                                        interdisciplinar (FATEC GT) <br> Página de
-                                        vendas de pacotes para viagens</p>
+                                        interdisciplinar (FATEC GT) <br> Página de turismo</p>
                                 </div>
                                 <div class="icons-slide">
                                     <i class="icon-html5"></i>
@@ -169,8 +169,7 @@
                 <div class="me-infos">
                     <h1 class="title-text contact-mb" style="font-size: 1.5rem; margin-bottom: 15px; font-weight: 400;">
                         CONTATO</h1>
-                    <p class="me-text">Olá, eu sou Lucas Soares Barbosa, tenho 22 anos.<br>Estou graduando em Análise e
-                        desenvolvimento de Sistemas pela Faculdade de Tecnologia de Guaratinguetá (FATEC)</p>
+                    <p class="me-text">Lucas Soares, Desenvolvedor Front-End.</p>
                 </div>
 
                 <div class="contact-infos reveal-name">
