--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- css -->
     <link rel="stylesheet" href="./src/css/index.css">
     <link rel="stylesheet" href="./src/icons/style.css">
+    <link rel="stylesheet" href="./src/css/responsive.css">
+    <link rel="stylesheet" href="./src/css/preLoader.css">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,6 +26,8 @@
 </head>
 
 <body>
+
+    <!-- LOADER -->
     <div class="preloader">
         <div id="loader"></div>
     </div>
@@ -32,12 +36,13 @@
     <div class="navbar">
         <h1 class="logo-letters">LSB</h1>
         <div>
-            
+
             <a class="title-text" href="#contact">Contato</a>
             <a class="title-text" href="#projetcs">Projetos</a>
         </div>
 
     </div>
+
     <!-- HOME-->
     <main class="container reveal-name">
         <section class="m-top w-max section-home">
@@ -51,7 +56,6 @@
 
         </section>
     </main>
-
 
     <!-- PROJECTS -->
     <section id="projetcs" class="container">
@@ -213,6 +217,7 @@
             </div>
         </div>
     </section>
+
     <!-- Socials Fixed menu -->
     <section>
         <!-- socials + scrolls -->
@@ -241,17 +246,11 @@
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
 
-
-    
+    <!-- SCRIPTS -->
     <script src="https://unpkg.com/blaze-slider@latest/dist/blaze-slider.dev.js"></script>
     <script src="https://unpkg.com/blaze-slider@latest/dist/blaze-slider.min.js"></script>
     <script src="./src/js/index.js"></script>
+
 </body>
 
 </html>
-<!-- 
-icon-github
-icon-instagram
-icon-linkedin
-icon-send
- -->
