html: 📍 Add responsive

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
             <!-- info-me-c -->
             <div class="info-me">
-                <p class="home-sub-text" style="margin-right: 150px; margin-bottom: -10px;">ME CHAMO</p>
+                <p class="home-sub-text text-dsk-1" style="margin-right: 150px; margin-bottom: -10px;">ME CHAMO</p>
                 <h1 class="home-title-text">LUCAS</h1>
-                <p class="home-sub-text" style="margin-left: 100px; margin-top: -10px;">DESENVOLVEDOR<br>FRONT-END</p>
+                <p class="home-sub-text text-dsk-2" style="margin-left: 100px; margin-top: -10px;">DESENVOLVEDOR<br>FRONT-END</p>
             </div>
 
         </section>
